<resources>
    <string name="app_name">Cinema</string>

    <string name="or_label">OR</string>
    <string name="password_label">Password:</string>
    <string name="login_label">LOGIN</string>
    <string name="register_label">REGISTER</string>
    <string name="guest_label">CONTINUE\nAS GUEST</string>
    <string name="username_label">Username:</string>
    <string name="welcome_label">Welcome!</string>
    <string name="cinema_title">Cinema</string>
    <string name="film_title">film_title</string>
    <string name="filter_menu">Filter</string>
    <string name="search_menu">Search</string>
    <string name="sort_menu">Sort</string>
    <string name="menu_menu">Menu</string>
    <string name="yourLists_title">Your lists</string>
    <string name="otherLists_title">Other lists</string>
    <string name="delete_text_btn">Delete</string>
    <string name="shareMenu_btn">Share</string>
    <string name="description_title">Date:</string>
    <string name="description_price">Price:</string>
    <string name="description_genre">Genre:</string>
    <string name="crew_title_label">Crew</string>
    <string name="cast_title_label">Cast</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="lists">Lists</string>
    <string name="trailer">Trailer</string>
    <string name="release_date">Release date:</string>
    <string name="popup_cancel">Cancel</string>
    <string name="genres">Genres: </string>
    <string name="rating_label">Rating</string>
    <string name="guest_login_message">Logged in as guest</string>
    <string name="user_login_message">Logged in as user</string>
    <string name="bearer" translatable="false">eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjZmUyMmY4NWQ5YTJmNTE5OWRkZGMxZWNhOGZhMmU2MCIsInN1YiI6IjYyNDQzZGRhYzUwYWQyMDA0NzAwMTkyYyIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.fewHZDQbJlDRbCD6SFsTMMiylqxJwqjq_dyrASXjML4</string>
    <string name="left_pointer" translatable="false"><![CDATA[<<]]></string>
    <string name="right_pointer" translatable="false"><![CDATA[>>]]></string>
    <string name="toggle_buttons_title">Toggle buttons</string>
    <string name="add">Add</string>
    <string name="create_list_label">Create</string>
    <string name="error_name_not_empty">Name can not be empty</string>
    <string name="login_guest_to_use_list">Login to use lists!</string>
    <string name="add_shared_list">Add shared list</string>
    <string name="filter_date">filter date</string>
    <string name="filter_rating">Filter rating</string>
    <string name="max_rating_label">Maximal Rating</string>
    <string name="minimal_rating_label">Minimal Rating</string>
    <string name="detail_add_to_list">Add to list</string>
    <string name="detail_image">detail_image</string>
    <string name="detail_description">Description</string>
    <string name="detail_companies">Companies</string>
    <string name="detail_no_genres">No genres</string>
    <string name="detail_placeholder">TextView</string>
    <string name="detail_title">title</string>
    <string name="detail_crew">Crew</string>
    <string name="make_list_name">Name</string>
    <string name="placeholder_checkbox">CheckBox</string>
    <string name="listname">Listname</string>
    <string name="list_code">List code</string>
    <string name="list_name">List name</string>
    <string name="description">Description</string>
    <string name="publish">Publish</string>
    <string name="choose_genres">Choose the genres you want to filter on</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="comedy">Comedy</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science fiction</string>
    <string name="companyname">CompanyName</string>
    <string name="crew_person_name">Crew person name</string>
    <string name="character_name">Character name</string>
    <string name="listsize">listSize</string>
    <string name="listtitle">listTitle</string>
    <string name="desc">desc</string>
    <string name="Add_to_lists">Add to your lists</string>
    <string name="list">List</string>
    <string name="movie">Movie</string>
    <string name="filter_genre" translatable="false">Filter genre</string>
</resources>