<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/choose_genres" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_genre_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1">


        <com.google.android.material.chip.Chip
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/action" />

        <com.google.android.material.chip.Chip
            android:id="@+id/adventure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/adventure" />

        <com.google.android.material.chip.Chip
            android:id="@+id/crime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/crime" />

        <com.google.android.material.chip.Chip
            android:id="@+id/documentary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/documentary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/drama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/drama" />

        <com.google.android.material.chip.Chip
            android:id="@+id/comedy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/comedy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/family" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fantasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/fantasy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/history" />

        <com.google.android.material.chip.Chip
            android:id="@+id/horror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/horror" />

        <com.google.android.material.chip.Chip
            android:id="@+id/romance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/romance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/science_fiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/science_fiction" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>