<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search_menu"
        app:showAsAction="always"
        android:orderInCategory="0"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/home_filter"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_sort"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_lists"
        android:icon="@drawable/lists_icon"
        android:title="@string/lists"
        app:showAsAction="never" />

    <item
        android:id="@+id/home_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>