<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/list_filter"
        android:icon="@drawable/filter_icon"
        android:title="@string/filter_menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/filter_genre"
                android:title="@string/filter_menu" />
        </menu>
    </item>
    <item
        android:id="@+id/list_share"
        android:title="@string/share_menu"
        app:showAsAction="always"
<<<<<<< HEAD
        android:title="@string/shareMenu_btn" />
=======
        android:icon="@drawable/share_icon" />
>>>>>>> 936d9424688c925425a76279f371d23f0e567830
    <item
        android:id="@+id/list_delete"
        android:title="@string/delete_text_btn"
        app:showAsAction="always"
        android:icon="@drawable/delete_icon" />


</menu>