<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Login_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_label"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="70dp" />

    <ImageView
        android:id="@+id/Login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/camera" />

    <TextView
        android:id="@+id/Login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_image"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/Login_editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/Login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_editUsername"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/Login_editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_editPassword"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_label" />

    <TextView
        android:id="@+id/Login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_login"
        android:layout_centerHorizontal="true"
        android:text="@string/or_label" />

    <Button
        android:id="@+id/Login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_or"
        android:layout_centerHorizontal="true"
        android:text="@string/register_label" />

    <TextView
        android:id="@+id/Login_or2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_register"
        android:layout_centerHorizontal="true"
        android:text="@string/or_label" />

    <Button
        android:id="@+id/Login_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_or2"
        android:layout_centerHorizontal="true"
        android:text="@string/guest_label" />


</RelativeLayout>