<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="116dp"
                android:layout_height="111dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="36dp"
                android:contentDescription="detail_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.44"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.416"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toBottomOf="@+id/detail_date" />

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="24dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/detail_description"
                app:layout_constraintTop_toBottomOf="@+id/detail_price" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="Description"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image" />


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_description">

                <VideoView
                    android:id="@+id/detail_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="201dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/cast_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/cast_title_label"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


            <TextView
                android:id="@+id/crew_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="324dp"
                android:text="@string/crew_title_lable"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cast_title"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/companies_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="324dp"
                android:text="Companies"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/crew_title"
                app:layout_constraintTop_toBottomOf="@+id/crewList"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_title"
                app:layout_constraintEnd_toStartOf="@+id/detail_date"
                app:layout_constraintHorizontal_bias="0.698"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toBottomOf="@+id/detail_title" />

            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/description_price"
                app:layout_constraintEnd_toStartOf="@+id/detail_price"
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toBottomOf="@+id/date_title" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="4dp"
                android:text="@string/description_genre"
                app:layout_constraintStart_toEndOf="@+id/detail_image"
                app:layout_constraintTop_toBottomOf="@+id/price_title" />

            <Button
                android:id="@+id/addToList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Add to list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/add_cardview"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="#A1A1A1">

                    <TextView
                        android:id="@+id/yourList_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yourLists_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="10dp"/>

                    <ListView
                        android:id="@+id/yourList_list"
                        android:layout_width="317dp"
                        android:layout_height="228dp"
                        android:layout_marginTop="16dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/yourList_txt" />



                    <Button
                        android:id="@+id/popup_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/yourList_list"
                        android:backgroundTint="#808080"
                        android:layout_marginStart="270dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/popup_cancel"
                        android:textColor="@color/black"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/crewList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/crew_title"
                app:layout_constraintTop_toBottomOf="@+id/crew_title" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/cast_title"
                app:layout_constraintTop_toBottomOf="@+id/cast_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/company_recyclerview"
                android:layout_width="105dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/companies_label"
                app:layout_constraintTop_toBottomOf="@+id/companies_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>